src/objects/TCB__c.object
<CustomObject>
    <fields>
        <fullName>CBM_20DC_PL__c</fullName>
        <formula>Case_CBM_m3__c * CTN_Layer__c *  Layer_PL__c *  PL_20FT__c + PL_20FT__c *  CBM_Pallet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBM/ 20DC (PL)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBM_20FT_FL__c</fullName>
        <formula>CTN_20FT__c *  Case_CBM_m3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBM/ 20FT (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBM_40DC_PL__c</fullName>
        <formula>Case_CBM_m3__c * CTN_Layer__c * Layer_PL__c *  PL_40FT__c + CBM_Pallet__c *  PL_40FT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBM/ 40DC (PL)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBM_40FT_FL__c</fullName>
        <formula>CTN_40FT__c * Case_CBM_m3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBM/ 40FT (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBM_40HC_FL__c</fullName>
        <formula>CTN_40FT_HC__c * Case_CBM_m3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBM/ 40HC (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBM_40HC_PL__c</fullName>
        <formula>Case_CBM_m3__c * CTN_Layer__c *  Layer_PL_40HC__c *  PL_40FT_HC__c + CBM_Pallet__c * PL_40FT_HC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBM/ 40HC (PL)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBM_Pallet__c</fullName>
        <formula>IF( ISPICKVAL(  Pallet_Type__c ,&apos;Disposal - 0.8x1.2m&apos;) , 0.1440,

IF(ISPICKVAL( Pallet_Type__c ,&apos;Disposal - 1x1.2m&apos;), 0.1800,

IF(ISPICKVAL( Pallet_Type__c ,&apos;Disposal - 1.1x1.1m&apos;), 0.1815,

IF(ISPICKVAL( Pallet_Type__c ,&apos;CHEP – 0.8x1.2m&apos;), 0.1440,

IF(ISPICKVAL( Pallet_Type__c ,&apos;CHEP – 40x48 inches&apos;), 0.1800,

IF(ISPICKVAL( Pallet_Type__c ,&apos;PECO – 0.8x1.2m&apos;), 0.1440,

IF(ISPICKVAL( Pallet_Type__c ,&apos;PECO – 40x48 inches&apos;), 0.1800,

IF(ISPICKVAL( Pallet_Type__c ,&apos;LOSCAM – 0.8x1.2m&apos;), 0.1440,

IF(ISPICKVAL( Pallet_Type__c ,&apos;LOSCAM – 40x48 inches&apos;), 0.1800, null

) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBM/ Pallet</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFR_LC_Pack_Floor_Load__c</fullName>
        <formula>CFR_USD_Pack_Floor_Load__c / Opportunity__r.Parent_Opportunity__r.Exchange_Rate_Local_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFR LC/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFR_LC_Pack_Pallet__c</fullName>
        <formula>CFR_USD_Pack_Pallet__c / Opportunity__r.Parent_Opportunity__r.Exchange_Rate_Local_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFR LC/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFR_USD_Pack_Floor_Load__c</fullName>
        <formula>FOB_USD_Pack_Floor_Load__c +Freight_Pack_FL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFR USD/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFR_USD_Pack_Pallet__c</fullName>
        <formula>FOB_USD_Pack_Pallet__c +  Freight_Pack_PL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFR USD/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFR_USD_lbs_Floor_Load__c</fullName>
        <formula>CFR_USD_Pack_Floor_Load__c / Opportunity__r.Plbs_Weight_G__c *453.59</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFR USD/ lbs (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFR_USD_lbs_Pallet__c</fullName>
        <formula>CFR_USD_Pack_Pallet__c /  Opportunity__r.Plbs_Weight_G__c * 453.59</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFR USD/ lbs (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFR_USD_lbs__c</fullName>
        <formula>CFR_USD_Pack_Floor_Load__c /  Opportunity__r.Plbs_Weight_G__c * 453.59</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFR USD/ lbs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CTN_20FT__c</fullName>
        <label>CTN/ 20FT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTN_40FT_HC__c</fullName>
        <label>CTN/ 40FT HC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTN_40FT__c</fullName>
        <label>CTN/ 40FT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTN_Layer__c</fullName>
        <label>CTN/ Layer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_CBM_m3__c</fullName>
        <formula>Length_Depth_mm__c *  Width_mm_2nd__c *  Height_mm__c /1000000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case CBM (m3)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Mix_PL__c</fullName>
        <label>Case Mix (PL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangeSetSpace__c</fullName>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearance_Pack_FL__c</fullName>
        <formula>IF(ISPICKVAL(  Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  Import_Clearance_USD_Cont__c /  Pack_40FT_HC_FL__c ,  Import_Clearance_USD_Cont__c /  Pack_20FT_FL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clearance/ Pack (FL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <label>Container Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dry</fullName>
                </value>
                <value>
                    <fullName>Reefer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Cost_USD_lbs__c</fullName>
        <formula>(Product_TCB__c +  TCB_1st_PM_Pouch_Jar__c +  TCB_2nd_PM_Outer__c +  Pallet_TCB__c +  Packing_TCB__c +  Initial_Design_TCB__c +  Fixed_Costs_TCB__c +  Fobbing_Fee_TCB__c +  Interest_TCB__c ) /  Opportunity__r.Plbs_Weight_G__c *1000/2.2046-  Total_Ingredient_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Cost (USD/ lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_LC_Pack_Floor_Load__c</fullName>
        <formula>DDP_USD_Pack_Floor_Load__c / Opportunity__r.Parent_Opportunity__r.Exchange_Rate_Local_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDP LC/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DDP_LC_Pack_Pallet__c</fullName>
        <formula>DDP_USD_Pack_Pallet__c / Opportunity__r.Parent_Opportunity__r.Exchange_Rate_Local_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDP LC/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DDP_TCB_FL__c</fullName>
        <formula>TCB_FOB__c +  Freight_Pack_FL__c +  Duty_Pack_FL__c +  Clearance_Pack_FL__c +  Dest_Haulage_Port_WH_Pack_FL__c +  WH_Cost_Dest_Pack_FL__c +  Trucking_Pack_FL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDP (TCB) (FL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_TCB_PL__c</fullName>
        <formula>Freight_Pack_PL__c +  Duty_Pack_PL__c +  Dest_Clearance_Pack_PL__c +  Dest_Haulage_Port_WH_Pack_PL__c +  WH_Cost_Dest_Pack_PL__c +  Trucking_to_Final_Dest_Pack_PL__c +  TCB_FOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDP (TCB) (PL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_USD_Pack_Floor_Load__c</fullName>
        <label>DDP USD/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_USD_Pack_Pallet__c</fullName>
        <formula>DDP_TCB_PL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDP USD/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_USD_lbs_Floor_Load__c</fullName>
        <formula>DDP_USD_Pack_Floor_Load__c /  Opportunity__r.Plbs_Weight_G__c *453.59</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDP USD/ lbs (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDP_USD_lbs_Pallet__c</fullName>
        <formula>DDP_USD_Pack_Pallet__c /  Opportunity__r.Plbs_Weight_G__c *453.59</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDP USD/ lbs (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depth_Gusset_Height_mm__c</fullName>
        <label>Depth/ Gusset/ Height (mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dest_Clearance_Pack_PL__c</fullName>
        <formula>IF(ISPICKVAL( Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  Import_Clearance_USD_Cont__c /  Pack_40FT_HC_PL__c ,  Import_Clearance_USD_Cont__c /  Pack_20FT_PL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dest. Clearance/ Pack (PL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dest_Haulage_Port_WH_Pack_FL__c</fullName>
        <formula>IF(ISPICKVAL(  Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  Port_Olam_WH_USD_Cont__c /  Pack_40FT_HC_FL__c , Port_Olam_WH_USD_Cont__c /  Pack_20FT_FL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dest. Haulage (Port - WH)/ Pack (FL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dest_Haulage_Port_WH_Pack_PL__c</fullName>
        <formula>IF(ISPICKVAL( Quotations_Given_as_Per__c , &quot;40FT Container&quot;) ,  Port_Olam_WH_USD_Cont__c /  Pack_40FT_HC_PL__c , Port_Olam_WH_USD_Cont__c /  Pack_20FT_PL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dest.Haulage (Port-WH)/ Pack (PL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duty_Pack_FL__c</fullName>
        <formula>(TCB_FOB__c +  Freight_Pack_FL__c )*  Duty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duty/ Pack (FL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duty_Pack_PL__c</fullName>
        <formula>(TCB_FOB__c +  Freight_Pack_PL__c )*  Duty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duty/ Pack (PL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <label>Duty (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EBITDA_USD_Pack__c</fullName>
        <label>EBITDA (USD/ Pack)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBITDA_USD_lbs__c</fullName>
        <formula>IF(EBITDA_USD_Pack__c =0, 0, EBITDA_USD_Pack__c /Opportunity__r.Plbs_Weight_G__c*453.59)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBITDA (USD/ lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_LC_Pack_Floor_Load__c</fullName>
        <formula>FOB_USD_Pack_Floor_Load__c /  Opportunity__r.Parent_Opportunity__r.Exchange_Rate_Local_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB LC/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOB_LC_Pack_Pallet__c</fullName>
        <formula>FOB_USD_Pack_Pallet__c / Opportunity__r.Parent_Opportunity__r.Exchange_Rate_Local_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB LC/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOB_USD_Pack_Floor_Load__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FOB USD/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_USD_Pack_Pallet__c</fullName>
        <formula>TCB_FOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB USD/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_USD_lbs_Floor_Load__c</fullName>
        <formula>FOB_USD_Pack_Floor_Load__c /  Opportunity__r.Plbs_Weight_G__c *453.59</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB USD/ lbs (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_USD_lbs_Pallet__c</fullName>
        <formula>FOB_USD_Pack_Pallet__c /  Opportunity__r.Plbs_Weight_G__c *453.59</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB USD/ lbs (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_to_DDP_USD_Pack_Floor_Load__c</fullName>
        <formula>DDP_USD_Pack_Floor_Load__c -  FOB_USD_Pack_Floor_Load__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB to DDP USD/ Pack (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_to_DDP_USD_Pack_Pallet__c</fullName>
        <formula>DDP_USD_Pack_Pallet__c -  FOB_USD_Pack_Pallet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB to DDP USD/ Pack (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_to_DDP_USD_lbs_Floor_Load__c</fullName>
        <formula>DDP_USD_lbs_Floor_Load__c -  FOB_USD_lbs_Floor_Load__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB to DDP USD/ lbs (Floor-Load)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB_to_DDP_USD_lbs_Pallet__c</fullName>
        <formula>DDP_USD_lbs_Pallet__c - FOB_USD_lbs_Floor_Load__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOB to DDP USD/ lbs (Pallet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Costs_TCB__c</fullName>
        <formula>Other_Fixed_Costs__c / Opportunity__r.Plbs_Annual_Unit__c / Opportunity__r.Plbs_Est_Award__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed Costs (TCB)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fobbing_Container__c</fullName>
        <label>Fobbing / Container</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fobbing_Fee_TCB__c</fullName>
        <formula>IF(ISPICKVAL(  Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  Fobbing_Container__c /  Pack_40FT_HC_PL__c ,  Fobbing_Container__c /  Pack_20FT_PL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fobbing Fee (TCB)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Container__c</fullName>
        <label>Freight / Container</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Pack_FL__c</fullName>
        <formula>ROUND(IF(ISPICKVAL(  Quotations_Given_as_Per__c  , &quot;40FT Container&quot;),  Freight_Container__c /  Pack_40FT_HC_FL__c ,  Freight_Container__c /   Pack_20FT_FL__c ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight/ Pack (FL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Pack_PL__c</fullName>
        <formula>IF(ISPICKVAL( Quotations_Given_as_Per__c , &quot;40FT Container&quot;),  Freight_Container__c /   Pack_40FT_HC_PL__c  ,  Freight_Container__c /  Pack_20FT_PL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight/ Pack (PL)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Case_Weight_kg_2nd__c</fullName>
        <formula>IF( Tare_Weight_g_2nd__c = 0, 0, (( Opportunity__r.Plbs_Weight_G__c +  Tare_Weight_g_1st__c ) *  Unit_CTN__c + Tare_Weight_g_2nd__c )/1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Case Weight (kg) (2nd)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Item_Weight_g_1st__c</fullName>
        <formula>IF(  Tare_Weight_g_1st__c = 0, 0, Tare_Weight_g_1st__c +  Opportunity__r.Plbs_Weight_G__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Item Weight (g) (1st)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_MT_20FT_FL__c</fullName>
        <formula>Gross_Case_Weight_kg_2nd__c * CTN_20FT__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross MT/20FT (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_MT_20FT_PL__c</fullName>
        <formula>Gross_Pallet_Weight_kg__c *  PL_20FT__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross MT/20FT (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_MT_40FT_FL__c</fullName>
        <formula>Gross_Case_Weight_kg_2nd__c * CTN_40FT__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross MT/40FT (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_MT_40FT_HC_FL__c</fullName>
        <formula>Gross_Case_Weight_kg_2nd__c * CTN_40FT_HC__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross MT/40FT HC (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_MT_40FT_HC_PL__c</fullName>
        <formula>(15+ (CTN_Layer__c * Layer_PL_40HC__c *  Gross_Case_Weight_kg_2nd__c ))*  PL_40FT__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross MT/40FT HC (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_MT_40FT_PL__c</fullName>
        <formula>Gross_Pallet_Weight_kg__c *   PL_40FT__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross MT/40FT (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Pallet_Weight_kg__c</fullName>
        <formula>15+ CTN_Layer__c * Layer_PL__c *  Gross_Case_Weight_kg_2nd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Pallet Weight (kg)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_mm__c</fullName>
        <label>Height (mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMU_DDP_Floor_Loading__c</fullName>
        <formula>(  Retail_Price_USD__c  -  DDP_TCB_FL__c ) / Retail_Price_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMU% (DDP) - Floor Loading</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IMU_DDP_Pallet_Loading__c</fullName>
        <formula>(Retail_Price_USD__c -  DDP_TCB_PL__c ) / Retail_Price_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMU% (DDP) - Pallet Loading</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IMU_FOB__c</fullName>
        <formula>(Retail_Price_USD__c -   TCB_FOB__c ) /  Retail_Price_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMU% (FOB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Import_Clearance_USD_Cont__c</fullName>
        <label>Import Clearance (USD/Cont)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Design_TCB__c</fullName>
        <formula>Initial_Design__c / Opportunity__r.Plbs_Annual_Unit__c / Opportunity__r.Plbs_Est_Award__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Design (TCB)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Design__c</fullName>
        <label>Initial Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Months__c</fullName>
        <label>Interest Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_TCB__c</fullName>
        <formula>(  Product_TCB__c +  TCB_1st_PM_Pouch_Jar__c +  TCB_2nd_PM_Outer__c +  Pallet_TCB__c +  Packing_TCB__c +  Initial_Design_TCB__c +  Fixed_Costs_TCB__c +  Fobbing_Fee_TCB__c )*  Interest_Months__c / 12 *  Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest (TCB)</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Layer_PL_40HC__c</fullName>
        <label>Layer/ PL 40HC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Layer_PL__c</fullName>
        <label>Layer/ PL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_Depth_mm__c</fullName>
        <label>Length/ Depth (mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_mm_1st__c</fullName>
        <label>Length (mm) (1st)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_1st_PM__c</fullName>
        <label>Loss (1st PM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loss_2nd_PM_Carton__c</fullName>
        <label>Loss (2nd PM - Carton)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loss_Product__c</fullName>
        <label>Loss (Product)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MOQ_Packaging_1st__c</fullName>
        <label>MOQ Packaging (1st)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MOQ_Packaging_2nd__c</fullName>
        <label>MOQ Packaging (2nd)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_20FT_FL__c</fullName>
        <formula>Pack_20FT_FL__c * Opportunity__r.Plbs_Weight_G__c /1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT/ 20FT (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_20FT_PL__c</fullName>
        <formula>Pack_20FT_PL__c *  Opportunity__r.Plbs_Weight_G__c /1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT/ 20FT (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_40FT_FL__c</fullName>
        <formula>Pack_40FT_FL__c * Opportunity__r.Plbs_Weight_G__c /1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT/ 40FT (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_40FT_HC_FL__c</fullName>
        <formula>Pack_40FT_HC_FL__c *  Opportunity__r.Plbs_Weight_G__c /1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT/ 40FT HC (FL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_40FT_HC_PL__c</fullName>
        <formula>Pack_40FT_HC_PL__c *  Opportunity__r.Plbs_Weight_G__c /1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT/ 40FT HC (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_40FT_PL__c</fullName>
        <formula>Pack_40FT_PL__c *  Opportunity__r.Plbs_Weight_G__c /1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT/ 40FT (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_TCB__c</fullName>
        <formula>(  Product_TCB__c +  TCB_1st_PM_Pouch_Jar__c +  TCB_2nd_PM_Outer__c +  Pallet_TCB__c +  Packing_TCB__c +  Initial_Design_TCB__c +  Fixed_Costs_TCB__c +  Fobbing_Fee_TCB__c +  Interest_TCB__c )*  Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin (TCB)</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Markup_W_O_Margin_USD_lbs__c</fullName>
        <formula>( Product_TCB__c +  TCB_1st_PM_Pouch_Jar__c +  TCB_2nd_PM_Outer__c +  Pallet_TCB__c +  Packing_TCB__c +  Initial_Design_TCB__c +  Fixed_Costs_TCB__c +  Fobbing_Fee_TCB__c +  Interest_TCB__c )/  Opportunity__r.Plbs_Weight_G__c * 453.59 -  Opportunity__r.Total_Ingredient_Price_No_Processing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markup W/O Margin (USD/ lbs)</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup_with_Margin_USD_lbs__c</fullName>
        <formula>FOB_USD_lbs_Pallet__c  -  Opportunity__r.Total_Ingredient_Price_No_Processing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markup with Margin (USD/ lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Height_mm__c</fullName>
        <label>Max Height (mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Weight_kg__c</fullName>
        <label>Max Weight (kg)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nut_Density_g_ml__c</fullName>
        <label>Nut Density(g/ml)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Olam_WHs_Cost_USD_Pallet_Excl_PLT__c</fullName>
        <label>Olam WH&apos;s Cost (USD/Pallet) - Excl. PLT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Olam_WHs_Cost_USD_Pallet_Incl_PLT__c</fullName>
        <label>Olam WH&apos;s Cost (USD/Pallet) - Incl. PLT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Processing__c</fullName>
        <label>Processing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Product Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TCBs</relationshipLabel>
        <relationshipName>TCBs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Fixed_Costs__c</fullName>
        <label>Other Fixed Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLBS_Est_Annual_Profit__c</fullName>
        <formula>Opportunity__r.Plbs_Annual_Unit__c *  Opportunity__r.Plbs_Est_Award__c *  Margin_TCB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Annual Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLBS_Est_Annual_Revenue__c</fullName>
        <formula>Opportunity__r.Plbs_Annual_Unit__c *  Opportunity__r.Plbs_Est_Award__c *  FOB_USD_Pack_Pallet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PL_20FT__c</fullName>
        <label>PL/ 20FT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>